--- a/index.html
+++ b/index.html
@@ -12,6 +12,35 @@
 </head>
 
 <body>
+    <header>
+        <nav></nav>
+    </header>
+    <main>
+        <section>
+            <article>
+
+            </article>
+        </section>
+        <ul>
+            <li>Soy una manzana</li>
+        </ul>
+        <ol>
+            <li>Soy un manzana</li>
+        </ol>
+    </main>
+    <footer>
+
+    </footer>
+
+    <p>Soy un texto</p>
+    <h1>Soy un titulo</h1>
+    <h2>Soy otro titulo</h2>
+    <h3>Soy otro titulo</h3>
+    <h4>Soy otro titulo</h4>
+    <h5>Soy otro titulo</h5>
+    <h6>Soy otro titulo</h6>
+
+    <a href="#">Soy un link</a>
 
 </body>
 
