--- a/claseVideo/index.html
+++ b/claseVideo/index.html
@@ -7,13 +7,13 @@
     <title>Video</title>
 </head>
 <body>
-    <main>
-        <section>
-            <video controls preload="auto">
-                <source src="dinamite.mp4#t=16,120" >
-                <source src="dope.mp4" >
-            </video>
-        </section>
-    </main>
+        <main>
+            <section>
+                <video controls preload="auto">
+                    <source src="i-need-yu.mp4#t=110,130">
+                    <source src="dope.mp4#t=110,130">
+                </video>
+            </section>
+        </main>
 </body>
 </html>
