selector HIJO (CHILD)

--- a/CSS/claseCombinadores/index.html
+++ b/CSS/claseCombinadores/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,16 +8,24 @@
     <title>Combinadores</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
+
 <body>
     <div>
-        <h2>soy un h2</h2>
-        <p>soy un p</p>
-        <h2>soy un h2</h2>
-        <h3>soy un h3</h3>
-        <p>soy un p</p>
-        <p>soy un p</p>
-        <p>soy un p</p>
-        <p>soy un p</p>
+        <article>
+            <p>Soy texto</p>
+        </article>
+        <article>
+            <p>Soy texto</p>
+        </article>
+
+        <section>
+            <div>
+                <p>Soy un texto</p>
+            </div>
+        </section>
+
+        <p>Soy un parrafo</p>
     </div>
 </body>
+
 </html>
