--- a/CSS/claseCombinadores/index.html
+++ b/CSS/claseCombinadores/index.html
@@ -11,6 +11,8 @@
 
 <body>
     <div>
+        <p>hola</p>
+        <h2>soy un h2</h2>
         <article>
             <p>Soy texto</p>
         </article>
@@ -24,8 +26,13 @@
             </div>
         </section>
 
+        <h3>soy un h3</h3>
+
         <p>Soy un parrafo</p>
     </div>
+    <p>hollas</p>
+    <p>hollas</p>
+    <p>hollas</p>
 </body>
 
 </html>
