uso de flexbox flex-direction, flex-wrap, justify-content

--- a/CSS/clasePosition/desafio/index.html
+++ b/CSS/clasePosition/desafio/index.html
@@ -11,13 +11,9 @@
 
 <body>
 
-    <div class="parent">
-        <div  class="box" id="titulo">Texto Ejemplo</div>
-        <div  class="box" id="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure corporis sint labore excepturi
-            fugit minus doloremque molestias dolorem cum necessitatibus sunt numquam exercitationem, adipisci nemo illum
-            in libero fuga? Porro mollitia tempore facilis rerum nemo assumenda laboriosam incidunt placeat quaerat eum
-            qui quam neque, reprehenderit aliquid sit fugiat. Error, voluptatibus!
-        </div>
+    <div class="container">
+        <div  class="titulo">Texto de ejemplo</div>
+        <p class="parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi et ad nobis, itaque quidem hic molestias eaque earum dolor perferendis aliquam tenetur enim ex delectus officiis ullam debitis libero omnis? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure nisi officia, repellat maxime aliquam sed odio architecto, tenetur vitae quibusdam omnis ullam ducimus. Nostrum sapiente ratione cum consequuntur molestiae quia?</p>
     </div>
 
 </body>
